# QT6.10.1_Music_Player

./: CMakeLists.txt  README.md
resources/sound/: 奇妙能力歌.lrc  风吹麦浪 -李健.lrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  playlist_example.h  playlist_interface.cpp  playlist_manager.h
src/core/: main.cpp
src/lyrics/: lrcwidget.cpp  lrcwidget.h
src/playlist/: playlist_example.cpp  playlist_interface.cpp  playlist_interface.h  playlist_manager.c  playlist_manager.h  playlist_util.c  playlist_util.h
src/search/: searchwidget.cpp  searchwidget.h
src/ui/: mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
